removed template modal window from js

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
   </main>
 
   @@include('partials/footer.html')
+  @@include('partials/modal.html')
+  @@include('partials/modal-success.html')
 
 </body>
 
